<resources>
    <string name="app_name">图聊社区</string>

    <!--新版登录专用-->
    <string name="login">登录</string>
    <string name="login_input_username_hint">手机号</string>
    <string name="hint_password">密码</string>
    <string name="input_password">请输入密码</string>
    <string name="login_hold_hint">自动登录</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="login_register_hint">注册</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">手机号</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_sms_auth_code">短信验证码</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="register_sms_wait_hint">别激动,休息一下呗&#8230;</string>

    <string name="loading_image">正在准备图片...</string>
    <string name="register_done_hint">完成</string>
    <string name="register_man_hint">男士</string>
    <string name="register_female_hint">女士</string>
    <string name="retrieve_pwd_step_hint">下一步</string>
    <string name="retrieve_pwd_email_label_one">邮箱用户找回密码，请</string>
    <string name="retrieve_pwd_email_label"><a>点击这里</a></string>
    <string name="reset_pwd_hint">请输入至少六位新密码</string>
    <string name="register_pwd_hint">请输入至少六位数密码</string>
    <string name="reset_pwd_submit">确认</string>
    <string name="message_pwd_error">密码错误</string>
    <string name="message_username_null">用户名未填写！！！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pushing">正在提交...</string>

    <string name="action_settings">Settings</string>
    <string name="new_friend">新的朋友</string>

    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>

    <string name="voice_seconds_tips">还可以说%1$s秒</string>

    <string name="voice_short_tips">录音时间太短</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    <string name="near_people">附近的人</string>

    <string name="agree">接受</string>
    <string name="name">昵称</string>
    <string name="level">等级</string>
    <string name="label">我的标签</string>
    <string name="paopao">我发布的图聊</string>
    <string name="systemInfo">系统信息</string>
    <string name="appInfo">软件信息</string>
    <string name="setting">设置</string>
</resources>
