<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/touxiang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/personmodel" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:textColor="#808080"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0.1dp"
            android:background="#FFFFFF"
            android:gravity="left"
            android:paddingTop="12dp"
            android:text="@string/label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/paopao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="left"
            android:paddingTop="12dp"
            android:text="@string/paopao"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/systemInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0.1dp"
            android:background="#FFFFFF"
            android:gravity="left"
            android:paddingTop="12dp"
            android:text="@string/systemInfo"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="0.1dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/appInfo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="left"
                android:paddingTop="12dp"
                android:text="@string/appInfo"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="left"
            android:paddingTop="12dp"
            android:text="@string/setting"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/quit"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="#008000"
            android:gravity="center"
            android:text="退出登录"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>